Keras Model Version issues

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-tensorflow==2.15.0
-opencv-python<=4.9.0.80
-#tf_keras
+tensorflow == 2.15.0
+tensorflow_hub == 0.16.1
+opencv-python
+tf_keras
 numpy<=1.26.4
 flask<=3.0.3
 pandas~=2.2.2
